welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: ')' expected but ';' found.
  if (temp1 <0 ;temp2> 100) {
               ^icyHot:2: error: ';' expected but ')' found.
  if (temp1 <0 ;temp2> 100) {
                          ^